# pms-toolkit

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: pages.yml
data/: materials.json  pms.json  schedules.json
datapacks/: fittings.json  flanges.json  flanges_b16_47.json
docs/: adapters.md  architecture.md  datapacks.md  rules.md
examples/: bolting.datapack.sample.json  fittings.datapack.sample.json  flanges.datapack.sample.json  flanges_b16_47.datapack.sample.json  gaskets.datapack.sample.json  valves.datapack.sample.json
rules/: conventions.json
schema/: README.md  pms.schema.json
schema/datapacks/: bolting-master.schema.json  fitting-master.schema.json  flange-master.schema.json  gasket-master.schema.json  valve-master.schema.json
src/pmskit/: __init__.py  calc_import.py  cli.py  compare.py  compliance.py  compliance_export.py  database.py  deviation_export.py  doc_parser.py  export.py  normalize.py  rating.py  report.py  rules.py  specbuilder.py  (+2 more)
tests/: test_compare.py  test_datapack_schemas.py  test_export.py  test_normalize.py  test_rating.py  test_rules_shadow.py  test_schema.py  test_specbuilder.py  test_thickness.py  test_validate.py
tools/: apply_pdf_corrections.py  b16_11_extract.py  b16_20_21_extract.py  b16_20_21_refine.py  b16_34_extract.py  b16_47_extract.py  b16_5_dims_extract.py  b16_5_extract.py  b16_9_extract.py  build_offline.py  calc_to_datapack.py  check_rules_parity.py
web/: app.js  compare.js  index.html  rating.js  rules.js  specbuilder.js  styles.css  thickness.js
(+10 files in other folders)
