[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pms-toolkit"
version = "0.5.0"
description = "Parse, validate and explore Piping Material Specifications (PMS) as open JSON."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Ahmad Rezazadeh" }]
keywords = ["piping", "oil-and-gas", "asme", "api", "epc", "pms", "engineering"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering",
]
dependencies = ["olefile>=0.46"]

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1"]
xls = ["xlrd>=2.0"]
dev = ["pytest>=7", "jsonschema>=4", "openpyxl>=3.1", "xlrd>=2.0"]

[project.scripts]
pmskit = "pmskit.cli:main"

[project.urls]
Homepage = "https://github.com/ahmadr59-ops/pms-toolkit"
Issues = "https://github.com/ahmadr59-ops/pms-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pmskit = ["../schema/pms.schema.json"]
